test/Fail/AbsurdPatternNotUnused.err
AbsurdPatternNotUnused.agda:15.12-16: error: [UnequalTerms]
The terms
  x
and
  y
are not equal at type ⊥
when checking that the expression refl has type
abort Bool x ≡ abort Bool y
